# bundle-analyser

./: README.md  pyproject.toml
examples/: basic_usage.md
src/bundle_analyser/: __init__.py  api.py  cli.py  core.py  manifest.py  models.py
tests/: conftest.py  test_api.py  test_cli.py  test_core.py  test_invariants.py  test_public_api.py
